Problem Solving for Google, LinkedIn, Microsoft, and Meta